--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -19,6 +19,17 @@ jobs:
     - name: Setup Android SDK
       uses: android-actions/setup-android@v2
 
+    - name: Install Gradle
+      run: |
+        sudo apt update
+        sudo apt install -y gradle
+
+    - name: Generate Gradle Wrapper
+      run: gradle wrapper
+
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew
+
     - name: Build APK
       run: ./gradlew assembleDebug
 
